--- a/codes/capstone_data.ipynb
+++ b/codes/capstone_data.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "I will compare different regression models to predict the prices of HDB flats, based on the propertys' attributes, their proximity to points of interest, market supply and demand and macroeconomic factors. \n",
     "\n",
-    "I will be using RMSE to measure model performance, and the model should at least improve upon baseline by 10%. Baseline is defined as the average of property prices."
+    "I will be using RMSE to measure model performance, and the model should at least improve upon baseline by 10%. Baseline will be the RMSE from Ordinary Least Square."
    ]
   },
   {
