--- a/codes/capstone_feature_geocoding.ipynb
+++ b/codes/capstone_feature_geocoding.ipynb
@@ -51,7 +51,7 @@
     "def get_pos_google(location_name):\n",
     "    \n",
     "    location_name = location_name + ' Singapore'\n",
-    "    geolocator = GoogleV3(api_key='AIzaSyDdpsQJUlKwnBUArrTuu7McX-Cjfdi3os4')\n",
+    "    geolocator = GoogleV3(api_key='####Google API key####')\n",
     "    loc = geolocator.geocode(location_name, timeout=10)\n",
     "    if not loc:\n",
     "        return 0,0\n",
